# pyroids

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  WORKING_NOTES.txt  __init__.py  game.py  labels.py  pyproject.toml  pyroids_script.py  pyrrhoids_script.py  pytest.ini  requirements.txt  ruff.toml  setup.py  sprites.py
.github/workflows/: build-test.yml  release.yml  test.yml
config/: template.py
lib/: iter_util.py  physics.py
lib/pyglet_lib/: audio_ext.py  dict_util.py  drawing.py
pyroids/: __init__.py  configuration.py  game.py  game_objects.py  labels.py  play.py
pyroids/config/: __init__.py  expert.py  novice.py  template.py
pyroids/lib/: __init__.py  iter_util.py  physics.py
pyroids/lib/pyglet_lib/: __init__.py  audio_ext.py  clockext.py  drawing.py  sprite_ext.py
pyroids/resources/: README.md
pyroids/utils/: __init__.py  iter_util.py  physics.py
pyroids/utils/pyglet_utils/: __init__.py  audio_ext.py  clockext.py  dict_util.py  drawing.py  sprite_ext.py
pyrrhoids/: __init__.py  game.py  sprites.py
pyrrhoids/config/: jonathan.py  nn.py
pyrrhoids/lib/pyglet_lib/: clockext.py  sprite_ext.py
tests/: build_test.py  test_app.py
